--- a/templates/landing_template.html
+++ b/templates/landing_template.html
@@ -156,7 +156,7 @@
   </section>
 
   <footer>
-    <small>Last updated: {{ general.DatePublishedISO }}</small>
+    <small>Last updated: {{ generated_at }}</small>
   </footer>
 </body>
 </html>
