--- a/templates/index_template.html
+++ b/templates/index_template.html
@@ -71,7 +71,7 @@
         <strong>Disclaimer:</strong> This is a mirror website intended only for repository and interoperability testing.  
         It does <u>not</u> collect any identifying data on its users. For the official journal website, visit <a href="https://ojs.pensamultimedia.it/index.php/siref/" rel="noopener noreferrer" target="_blank">Formazione & insegnamento</a>.
       </p>
-      <p>Last updated: {{ last_updated }}</p>
+      <p>Last updated: {{ generated_at }}</p>
     </div>
   </footer>
 </body>
