--- a/templates/index_template.html
+++ b/templates/index_template.html
@@ -41,7 +41,7 @@
   {% endfor %}
   </main>
   <footer>
-    <p>Last updated: {{ last_updated }}</p>
+    <p>Last updated: {{ generated_at }}</p>
   </footer>
 </body>
 </html>
