--- a/templates/landing_template.html
+++ b/templates/landing_template.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html lang="{{ journal.language }}">
 <head>
+  <!--
+    THIS IS A MIRROR/TESTING ARCHIVE, NOT THE OFFICIAL JOURNAL WEBSITE.
+    Official site: https://ojs.pensamultimedia.it/index.php/siref/
+    All metadata is for repository/discovery purposes ONLY.
+  -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    /* Compact hanging indent for references */
-    #references p {
-      margin: 0.3em 0;
-      text-indent: -1in;
-      padding-left: 1in;
-      line-height: 1.4;
-    }
-  </style>
 
-  {# derive year/vol/issue/slug path for mirror URL #}
-  {% set year = general.PublicationYear %}
-  {% set vol = general.Volume %}
-  {% set issue = general.Issue %}
-  {% set slug = languages[0].title | slugify %}
-  {% set filename = article_id ~ '-' ~ slug ~ '.html' %}
-  {% set path = year ~ '/' ~ vol ~ '/' ~ issue ~ '/' ~ filename %}
-  {% set mirror_url = 'https://formazione-insegnamento.eu/' ~ path %}
+  <meta name="mirror-site" content="This is a repository/interoperability mirror, not the official journal website. See https://ojs.pensamultimedia.it/index.php/siref/">
 
   <!-- Primary title in English -->
-  <title>{{ languages[0].title }} | {{ journal.title }}</title>
+  <title>{{ languages[0].title }} | {{ journal.title }} (Mirror Archive)</title>
   <meta name="description" content="{{ languages[0].abstract }}">
   <meta name="keywords" content="{{ languages[0].keywords }}">
   <link rel="canonical" href="{{ mirror_url }}">
+
+  <!-- Journal-level metadata (harmonized with index.html) -->
+  <meta name="journal_title" content="{{ journal.title }}">
+  <meta name="journal_abbrev" content="{{ journal.abbrev }}">
+  <meta name="journal_alternative" content="{{ journal.alternative }}">
+  <meta name="journal_publisher" content="{{ journal.publisher }}">
+  <meta name="journal_editor" content="{{ journal.editor }}">
+  <meta name="journal_director" content="{{ journal.director }}">
+  <meta name="journal_issn" content="{{ journal.issn }}">
+  <meta name="journal_issn_l" content="{{ journal.issn_l }}">
+  <meta name="journal_url" content="{{ journal.url }}">
+  <meta name="journal_license" content="{{ journal.license }}">
 
   <!-- Dublin Core multilingual -->
   {% for sec in languages %}
@@ -34,6 +35,16 @@
     <meta name="DC.Description" xml:lang="{{ sec.lang }}" content="{{ sec.abstract }}">
     <meta name="DC.Subject" xml:lang="{{ sec.lang }}" content="{{ sec.keywords }}">
   {% endfor %}
+
+  <!-- Journal-level Dublin Core -->
+  <meta name="DC.Publisher" content="{{ journal.publisher }}">
+  <meta name="DC.Rights" content="CC BY 4.0">
+  <meta name="DC.Identifier" content="{{ mirror_url }}">
+  <meta name="DC.Source" content="{{ journal.url }}">
+  <meta name="DC.Type" content="Text.Serial.Journal">
+  <meta name="DC.Language" content="{{ journal.language }}">
+  <meta name="DC.Rights.Holder" content="Pensa MultiMedia (until 2022); Authors (from 2022)">
+  <meta name="DC.Coverage" content="Italia; Europa; internazionale">
 
   <!-- JATS4R / Highwire -->
   <meta name="citation_title" content="{{ languages[0].title }}">
@@ -46,19 +57,17 @@
   <meta name="citation_firstpage" content="{{ general.Pages.split('-')[0] }}">
   <meta name="citation_lastpage" content="{{ general.Pages.split('-')[1] if '-' in general.Pages else '' }}">
   <meta name="citation_pdf_url" content="{{ general.PDF_URL }}">
-  <!-- Reference metadata -->
+  <meta name="citation_fulltext_html_url" content="{{ mirror_url }}">
   {% for ref in general.References %}
     <meta name="DC.Relation" content="{{ ref|striptags }}">
     <meta name="citation_reference" content="{{ ref|striptags }}">
   {% endfor %}
 
-  <!-- JSON-LD Schema.org -->
+  <!-- JSON-LD Schema.org (mirror archive note) -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "ScholarlyArticle",
-    "@id": "https://ojs.pensamultimedia.it/index.php/siref/article/view/{{ article_id }}",
-    "url": "https://ojs.pensamultimedia.it/index.php/siref/article/view/{{ article_id }}",
     "headline": "{{ languages[0].title }}",
     "name": [{% for sec in languages %}{"@value": "{{ sec.title }}", "@language": "{{ sec.lang }}"}{% if not loop.last %}, {% endif %}{% endfor %}],
     "author": [
@@ -66,8 +75,21 @@
     ],
     "publisher": { "@type": "Organization", "name": "{{ journal.publisher }}" },
     "datePublished": "{{ general.Citation_Date }}T00:00:00+01:00",
-    "inLanguage": "en",
-    "citation": [{% for ref in general.References %}"{{ ref|striptags }}"{% if not loop.last %}, {% endif %}{% endfor %}]
+    "inLanguage": "{{ journal.language }}",
+    "citation": [{% for ref in general.References %}"{{ ref|striptags }}"{% if not loop.last %}, {% endif %}{% endfor %}],
+    "isAccessibleForFree": true,
+    "license": "{{ journal.license }}",
+    "identifier": "{{ general.DOI }}",
+    "url": "{{ mirror_url }}",
+    "sameAs": "{{ journal.url }}",
+    "mainEntityOfPage": "{{ mirror_url }}",
+    "additionalProperty": [
+      {
+        "@type": "PropertyValue",
+        "name": "mirror",
+        "value": "This is a repository/interoperability mirror, not the official journal website."
+      }
+    ]
   }
   </script>
 
@@ -75,8 +97,8 @@
   <meta property="og:type" content="article">
   <meta property="og:title" content="{{ languages[0].title }}">
   <meta property="og:description" content="{{ languages[0].abstract }}">
-  <meta property="og:url" content="https://ojs.pensamultimedia.it/index.php/siref/article/view/{{ article_id }}">
-  <meta property="og:site_name" content="{{ journal.title }}">
+  <meta property="og:url" content="{{ mirror_url }}">
+  <meta property="og:site_name" content="{{ journal.title }} (Mirror Archive)">
   {% for sec in languages %}
     <meta property="og:locale:alternate" content="{{ sec.lang }}">
   {% endfor %}
@@ -86,6 +108,16 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="{{ languages[0].title }}">
   <meta name="twitter:description" content="{{ languages[0].abstract }}">
+
+  <style>
+    /* Compact hanging indent for references */
+    #references p {
+      margin: 0.3em 0;
+      text-indent: -1in;
+      padding-left: 1in;
+      line-height: 1.4;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -94,11 +126,21 @@
     <!-- Journal title in italic, slightly larger -->
     <p style="font-size:1.25em; font-style:italic; margin-top:0;">{{ journal.title }}</p>
     <p>ISSN: {{ journal.issn }} | Published: {{ general.Citation_Date }}T00:00:00+01:00</p>
-    <p><strong>Main Article Landing Page:</strong> <a href="https://ojs.pensamultimedia.it/index.php/siref/article/view/{{ article_id }}" target="_blank">https://ojs.pensamultimedia.it/index.php/siref/article/view/{{ article_id }}</a></p>
+    <p>
+      <strong>Main Article Landing Page:</strong>
+      <a href="https://ojs.pensamultimedia.it/index.php/siref/article/view/{{ article_id }}" target="_blank">
+        https://ojs.pensamultimedia.it/index.php/siref/article/view/{{ article_id }}
+      </a>
+    </p>
     <p><strong>Full Text HTML:</strong> {% if general.Full_Text_HTML_URL %}<a href="{{ general.Full_Text_HTML_URL }}" target="_blank">{{ general.Full_Text_HTML_URL }}</a>{% else %}missing data{% endif %}</p>
     <p><strong>Full Text PDF:</strong> {% if general.PDF_URL %}<a href="{{ general.PDF_URL }}" target="_blank">{{ general.PDF_URL }}</a>{% else %}missing data{% endif %}</p>
     <p><strong>Full Text XML:</strong> {% if general.Full_Text_XML_URL %}<a href="{{ general.Full_Text_XML_URL }}" target="_blank">{{ general.Full_Text_XML_URL }}</a>{% else %}missing data{% endif %}</p>
     <p><strong>Mirror URL:</strong> <a href="{{ mirror_url }}" target="_blank">{{ mirror_url }}</a></p>
+    <p style="color:#666; font-size:0.95em; margin-top:1em;">
+      <strong>Disclaimer:</strong>
+      This landing page is part of a repository/interoperability mirror of <a href="https://ojs.pensamultimedia.it/index.php/siref/" target="_blank">Formazione &amp; insegnamento</a>.
+      It is not the official journal website.
+    </p>
   </header>
 
   <!-- Authors section -->
