--- a/templates/landing_template.html
+++ b/templates/landing_template.html
@@ -119,7 +119,7 @@
     </ul>
   </section>
 
-  <!-- General metadata section -->
+  <!-- General metadata section, very important -->
   <section id="general-meta">
     <h2>General Metadata</h2>
     <ul>
