--- a/templates/landing_template.html
+++ b/templates/landing_template.html
@@ -22,7 +22,7 @@
   {% set path = year ~ '/' ~ vol ~ '/' ~ issue ~ '/' ~ filename %}
   {% set mirror_url = 'https://formazione-insegnamento.eu/' ~ path %}
 
-  <!-- Primary title in English (hello World) -->
+  <!-- Primary title in English -->
   <title>{{ languages[0].title }} | {{ journal.title }}</title>
   <meta name="description" content="{{ languages[0].abstract }}">
   <meta name="keywords" content="{{ languages[0].keywords }}">
