--- a/templates/landing_template.html
+++ b/templates/landing_template.html
@@ -179,7 +179,7 @@
     </ul>
   </section>
 
-  <!-- Language-specific metadata sections -->
+  <!-- Language-specific metadata sections, which we like -->
   {% for sec in languages %}
   <section lang="{{ sec.lang }}">
     <h2>Metadata ({{ sec.lang.upper() }})</h2>
