--- a/templates/index_template.html
+++ b/templates/index_template.html
@@ -133,7 +133,7 @@
   }
   </script>
 
-  <!-- RSS/ATOM/Stylesheets (optional: keep or remove as you wish) -->
+  <!-- RSS/ATOM/Stylesheets -->
   <link rel="alternate" type="application/atom+xml" href="https://ojs.pensamultimedia.it/index.php/siref/gateway/plugin/WebFeedGatewayPlugin/atom">
   <link rel="alternate" type="application/rdf+xml" href="https://ojs.pensamultimedia.it/index.php/siref/gateway/plugin/WebFeedGatewayPlugin/rss">
   <link rel="alternate" type="application/rss+xml" href="https://ojs.pensamultimedia.it/index.php/siref/gateway/plugin/WebFeedGatewayPlugin/rss2">
