--- a/templates/landing_template.html
+++ b/templates/landing_template.html
@@ -109,6 +109,8 @@
   <meta name="twitter:title" content="{{ languages[0].title }}">
   <meta name="twitter:description" content="{{ languages[0].abstract }}">
 
+  <link rel="service" type="application/oai-pmh+xml" title="OAI-PMH endpoint" href="https://formazioneinsegnamento.pythonanywhere.com/oai">
+  
   <style>
     /* Compact hanging indent for references */
     #references p {
