--- a/templates/index_template.html
+++ b/templates/index_template.html
@@ -143,6 +143,9 @@
   <link rel="stylesheet" href="https://ojs.pensamultimedia.it/public/journals/6/styleSheet.css?d=" type="text/css" />
   <link rel="stylesheet" href="https://ojs.pensamultimedia.it/public/site/styleSheet.css?v=3.3.0.14" type="text/css" />
 
+  # OAI-PMH instructions for robots
+  <link rel="service" type="application/oai-pmh+xml" title="OAI-PMH endpoint" href="https://formazioneinsegnamento.pythonanywhere.com/oai">
+  
   <style>
     body { font-family: sans-serif; padding: 2em; }
     h1, h2, h3 { margin-top: 1em; }
